# container-irrd

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  irrd.yaml  pyproject-irrexplorer.toml  pyproject.toml  renovate.json  requirements-irrd.txt
.github/: copilot-instructions.md
.github/workflows/: publish.yaml  test.yaml
s6-rc.d/svc-irrd/: run
s6-rc.d/svc-irrexplorer/: run
scripts/: init-irrd.sh  init-irrexplorer.py  init-irrexplorer.sh
tests/: docker-compose.yaml  irrd.yaml  irrexplorer.yaml  test.sh
uv/irrd/: pyproject.toml
uv/irrexplorer/: pyproject.toml
