[tool.poetry]
name = "irrd"
version = "0.0.1"
description = "IRRd Test"
authors = ["MattKobayashi <matthew@kobayashi.au>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.14.0"
psycopg2-binary = "2.9.11"
PyYAML = "6.0.3"

[build-system]
requires = ["poetry-core==2.1.3"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py311']
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
